packages/carbon-web-components/src/components/data-table/_table-core.scss
/* ... */
:host(#{$prefix}-table-row) ::slotted(#{$prefix}-table-cell),
:host(#{$prefix}-table-row) ::slotted(#{$prefix}-table-cell-skeleton),
:host(#{$prefix}-table-row) .#{$prefix}--table-column-checkbox,
:host(#{$prefix}-table-expand-row) ::slotted(#{$prefix}-table-cell),
:host(#{$prefix}-table-expand-row) ::slotted(#{$prefix}-table-cell-skeleton),
:host(#{$prefix}-table-expand-row) .#{$prefix}--table-expand,
:host(#{$prefix}-table-expand-row) .#{$prefix}--table-column-checkbox {
  display: table-cell;
}

//
// Table header row
//

:host(#{$prefix}-table-head) ::slotted(#{$prefix}-table-header-row),
:host(#{$prefix}-table-head) ::slotted(#{$prefix}-table-header-expand-row) {
  height: $spacing-09;
  display: table-row;
}

//
// Table header cell
//
:host(#{$prefix}-table-header-row) {
  outline: none;

  ::slotted(#{$prefix}-table-header-cell),
  ::slotted(#{$prefix}-table-header-cell-skeleton) {
    color: $text-primary;
    background-color: $layer-accent-01;
    text-align: left;
    display: table-cell;
    outline: none;
  }

  ::slotted(#{$prefix}-table-header-cell),
  .#{$prefix}--table-expand,
  .#{$prefix}--table-column-checkbox {
    padding-left: $spacing-05;
    padding-right: $spacing-05;
    text-align: left;
    vertical-align: middle;
  }

  ::slotted(#{$prefix}-table-header-cell:first-of-type),
  ::slotted(#{$prefix}-table-header-cell-skeleton:first-of-type) {
    padding-left: $spacing-05;
  }
}

:host(#{$prefix}-table-header-row:not([batch-expansion])) {
  .#{$prefix}--table-expand__button {
    display: none;
  }
}

:host(#{$prefix}-table-header-row[selection-name]) {
  .#{$prefix}--table-expand {
    display: table-cell;
  }
}

:host(#{$prefix}-table-header-row[sticky-header]) {
  #{$prefix}-checkbox {
    margin: 0;
    padding-top: $spacing-04;
    border-bottom: 1px solid $layer-active;
  }
}

:host(#{$prefix}-table-header-row[expandable]),
:host(#{$prefix}-table-row[expandable]),
:host(#{$prefix}-table-header-row[selection-name]),
:host(#{$prefix}-table-row[selection-name]) {
  .#{$prefix}--table-expand {
    height: $spacing-07;
    width: $spacing-07;

    padding: $spacing-03;
    padding-right: 0;
  }
}

:host(#{$prefix}-table-header-row[expanded]),
:host(#{$prefix}-table-row[expanded]) {
  transition: transform $duration-moderate-01 motion(standard, productive);
  .#{$prefix}--table-expand__svg {
    transform: rotate(270deg);
  }
}

:host(#{$prefix}-table-header-row[rows-with-slug]) {
  .#{$prefix}--table-column-checkbox,
  .#{$prefix}--table-expand {
    padding-left: $spacing-08;
  }
}
:host(#{$prefix}-table-header-row[rows-with-slug])
  :host(#{$prefix}-table-row[rows-with-slug]) {
  #{$prefix}-checkbox {
    padding-left: $spacing-03;
  }
}

:host(#{$prefix}-table-header-row[selection-name][rows-with-slug]),
:host(#{$prefix}-table-row[selection-name][expandable]) {
  .#{$prefix}--table-column-checkbox {
    padding-left: $spacing-03;
  }
}

//
// Table row
//

:host(#{$prefix}-table-body) {
  ::slotted(#{$prefix}-table-row),
  ::slotted(#{$prefix}-table-expand-row) {
    border: none;
    height: $spacing-09;
    width: 100%;
    display: table-row;
    outline: none;
  }
}

:host(#{$prefix}-table-body[sticky-header]) {
  ::slotted(#{$prefix}-table-row),
  ::slotted(#{$prefix}-table-expand-row) {
    display: flex;
  }
}

//
// Table cell
//

:host(#{$prefix}-table-cell) {
  border-top: 1px solid $layer-01;
  border-bottom: 1px solid $border-subtle;
  padding: 0 $spacing-05;

  ::slotted(#{$prefix}-overflow-menu:hover) {
    background-color: none;
  }
}

:host(#{$prefix}-table-cell[overflow-menu-on-hover]) {
  ::slotted(*) {
    opacity: 0;
  }
}

:host(#{$prefix}-table-cell-content) {
  @include type-style('label-01');
  display: block;
}

:host(#{$prefix}-table-row[sticky-header]),
:host(#{$prefix}-table-expand-row[sticky-header]) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton) {
    width: 100%;
    padding-top: rem(14px);
  }
}

:host(#{$prefix}-table-row[size='xl']),
:host(#{$prefix}-table-expand-row[size='xl']) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton) {
    vertical-align: top;
  }
}

:host(#{$prefix}-table-row),
:host(#{$prefix}-table-expand-row) {
  ::slotted(#{$prefix}-table-cell),
  ::slotted(#{$prefix}-table-cell-skeleton),
  .#{$prefix}--table-expand,
  .#{$prefix}--table-column-checkbox {
    color: $text-secondary;
    vertical-align: middle;
  }
}

:host(#{$prefix}-table-row) {
  ::slotted(#{$prefix}-table-cell:first-of-type),
  ::slotted(#{$prefix}-table-cell-skeleton:first-of-type) {
    padding-left: $spacing-05;
  }

  ::slotted(#{$prefix}-table-cell:last-of-type),
  ::slotted(#{$prefix}-table-cell-skeleton:last-of-type) {
    padding-right: $spacing-05;
  }
}

:host(#{$prefix}-table-row[expandable]),
:host(#{$prefix}-table-row[selection-name]) {
  .#{$prefix}--table-expand {
    display: table-cell;
    border-top: 1px solid $layer-01;
    border-bottom: 1px solid $border-subtle;
    padding-right: 0;
    transition: transform $duration-moderate-01 motion(standard, productive);
  }
}

:host(#{$prefix}-table-row[expandable][expanded]),
:host(#{$prefix}-table-row[selection-name][expanded]) {
  .#{$prefix}--table-expand__svg {
    transform: rotate(270deg);
  }
}

:host(#{$prefix}-table-row[expandable][expanded]),
:host(#{$prefix}-table-row[selection-name][expandable][expanded]),
:host(#{$prefix}-table-row[expandable][expanded][highlighted]),
:host(#{$prefix}-table-row[selection-name][expandable][expanded][highlighted])
  :host(#{$prefix}-table-row[expandable][expanded]:hover),
:host(#{$prefix}-table-row[selection-name][expandable][expanded]:hover) {
  .#{$prefix}--table-expand {
    border-bottom-color: transparent;
  }
}

:host(#{$prefix}-table-row[expandable][expanded][selected]),
/* ... */

